--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ h1,h2,h3, label {
 	display: flex;
 	flex-wrap: wrap;
 	overflow: hidden;
-	justify-content: space-around;
+	justify-content: flex-start;
 }
 
 .idea-form {
