--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ h1,h2,h3, label {
 	border: 1px solid pink;
 	display: flex;
 	flex-wrap: wrap;
-	overflow: hidden;
+	overflow: scroll;
 	justify-content: flex-start;
 }
 
