--- a/style.css
+++ b/style.css
@@ -20,7 +20,13 @@
 	color: #e9e9f3;
 }
 
+.hide {
+	display: none;
+}
 
+.block {
+	display: block;
+}
 /*----------Other---------------*/
 
 body {
@@ -97,8 +103,7 @@ h1,h2,h3, label {
 
 .search-form__display-list {
 	list-style-type: none;
-	width: 80%;
-	display: block;
+	width: 40%;
 	background-color: #fff;
 	z-index: 1;
 }
