--- a/style.css
+++ b/style.css
@@ -91,19 +91,20 @@ h1,h2,h3, label {
 .top-section__search-form {
 	flex-direction: row;
 	align-items: center;
+	flex-wrap: wrap;
 	height: 20%;
 }
 .search-form__search-btn {
-	flex: 1;
+	width: 10%;
 }
 
 .search-form__search-input {
-	flex: 9;
+	width: 90%;
 }
 
 .search-form__display-list {
 	list-style-type: none;
-	width: 40%;
+	width: 100%;
 	background-color: #fff;
 	z-index: 1;
 }
